--- a/src/pages/en/tag/[tag].astro
+++ b/src/pages/en/tag/[tag].astro
@@ -32,7 +32,7 @@ export async function getStaticPaths() {
 }
 
 const posts = await getPostsByTag(tag, "en");
-const tagData = await getTagsData(tag);
+const tagData = await getTagsData(tag) ?? { label: { es: tag, en: tag } };
 ---
 
 <Layout title="Alexys Hegmann dot rocks">
