--- a/src/pages/es/tag/[tag].astro
+++ b/src/pages/es/tag/[tag].astro
@@ -32,7 +32,7 @@ export async function getStaticPaths() {
 }
 
 const posts = await getPostsByTag(tag, "es");
-const tagData = await getTagsData(tag);
+const tagData = (await getTagsData(tag)) ?? { label: { es: tag, en: tag } };
 ---
 
 <Layout title="Alexys Hegmann dot rocks">
@@ -66,7 +66,12 @@ const tagData = await getTagsData(tag);
             />
             <div class="text-3xl">No hay artículos aquí todavía</div>
             <div class="mt-8">
-              <a href={getLocaleRoute("es", "/")} class="p-4 bg-rose-700 hover:bg-rose-500 transition-colors">Ir al inicio</a>
+              <a
+                href={getLocaleRoute("es", "/")}
+                class="p-4 bg-rose-700 hover:bg-rose-500 transition-colors"
+              >
+                Ir al inicio
+              </a>
             </div>
           </div>
         ) : (
