--- a/src/pages/en/blog/[slug].astro
+++ b/src/pages/en/blog/[slug].astro
@@ -3,6 +3,8 @@ import { getCollection } from "astro:content";
 import Layout from "../../../layouts/Layout.astro";
 import { format } from "date-fns";
 import { Image } from "astro:assets";
+import { getRelatedPosts } from "../../../queries/posts";
+import PostList from "../../../components/PostList.astro";
 
 export async function getStaticPaths() {
   let posts = await getCollection("blog");
@@ -16,6 +18,7 @@ export async function getStaticPaths() {
 
 const { post } = Astro.props;
 const { Content } = await post.render();
+const relatedPosts = await getRelatedPosts("en", post);
 ---
 
 <Layout title="Alexys Hegmann dot rocks">
@@ -38,11 +41,23 @@ const { Content } = await post.render();
         {post.data.title}
       </h2>
       <div class="text-slate-500 text-sm mb-2">
-        {format(post.data.date, "MMMM do, yyyy ' at ' HH:mm")}
+        {format(post.data.date, "d ' de ' MMMM ' del ' yyyy ' a las ' HH:mm")}
       </div>
     </header>
-    <main class="prose prose-rose prose-invert px-4 md:px-0">
-      <Content />
-    </main>
+    <div class="flex flex-col md:flex-row gap-4">
+      <main class="px-4 md:px-0 w-full md:w-2/3 flex justify-center">
+        <div class="prose prose-rose prose-invert w-full">
+          <Content />
+        </div>
+      </main>
+      <aside class="w-full md:w-1/3 px-4 md:px-0">
+        <section>
+          <h3 class="text-rose-600 border-b-2 border-rose-600 mb-4">
+            Related Posts
+          </h3>
+          <PostList posts={relatedPosts} />
+        </section>
+      </aside>
+    </div>
   </div>
 </Layout>
