Update PostList component to accept type Unknown

--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import { getLocaleRoute } from "../utils/i18n";
 
 interface Props {
-  posts: unknown[];
+  posts: any[];
 }
 
 const cLocale = Astro.currentLocale ?? "es";
