Fix responsive styles for Slug page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -87,7 +87,7 @@ const menuItems = [
                   <Icon name={item.icon} class="inline-block size-4" />
                   <span
                     class="flex-grow
-                   hidden lg:inline"
+                   hidden xl:inline"
                   >
                     {item.label}
                   </span>
